--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
-}
+/* .App {
+  display: grid;
+  grid-template-columns: 35% 65%;
+  background-color: #f5f5f5;
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  box-sizing: border-box;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+html,
+body {
+  height: 100%;
+}
+#root{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.App {
+  max-width: 100%;
+  margin: auto;
+  background-color: #fff;
+  min-height: 80vh;
+  width: 100%;
+  display: flex;
+}
+.__main{
+  flex-grow: 1;
+  background-color: #f5f5f5;
+  display: flex;
+}
+.App__sidebar {
+  border-right: 1px solid #dfdfdf;
+  width: 30%;
+  min-width: 300px;
 }
 
-.App-link {
-  color: #61dafb;
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ebebeb;
+}
+@media screen and (max-width: 925px) {
+  .App__sidebar.hidden {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .App__sidebar.width {
+    width: 100%;
   }
 }
